--- a/default.yml
+++ b/default.yml
@@ -153,7 +153,7 @@ Lint/Loop:
   Enabled: true
 
 Lint/MissingCopEnableDirective:
-  Enable: true
+  Enabled: true
 
 Lint/ParenthesesAsGroupedExpression:
   Enabled: true
